--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -49,4 +49,4 @@ deploy:
   prerelease: false
   tag: $(APPVEYOR_REPO_TAG_NAME) 
   on:
-    APPVEYOR_REPO_TAG: true        # deploy on tag push only
+    branch: master # only this will work
