--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -39,14 +39,13 @@ artifacts:
     type: zip
     
 deploy: 
-  release: dummy-v$(tag)
+  release: dummy-v$(appveyor_build_version)
   description: 'Release description'
   provider: GitHub
   auth_token: # your encrypted token from GitHub
     secure: 5c6ifu7R/0JzCAHg9PIxYsWvkc93jD6LZeAUmVoE8TxSMb8953FlsdJwNTzM30XN
-  artifact: Dummy.zip            # upload all NuGet packages to release assets
+  artifact: Dummy.zip 
   draft: false
   prerelease: false
-  skip_tags: true
   on:
-    branch: master # only this will work
+    APPVEYOR_REPO_TAG: true
