--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -40,6 +40,7 @@ artifacts:
     
 deploy: 
   release: dummy-v$(appveyor_build_version)
+  tag: $(APPVEYOR_REPO_TAG_NAME)
   description: 'Release description'
   provider: GitHub
   auth_token: # your encrypted token from GitHub
